--- a/css/main.scss
+++ b/css/main.scss
@@ -207,7 +207,7 @@ $tab: 480px; // タブレット
     margin-top: 3rem;
     display: inline-block;
     position: relative;
-    padding: 2rem 3rem;
+    padding: 1rem 2rem;
     cursor: pointer;
     @include fontsize(12);
     color: #333333;
@@ -222,8 +222,8 @@ $tab: 480px; // タブレット
         left:0;
         border-left:1px solid #333333;
         border-top:1px solid #333333;
-        width:3rem;
-        height:3rem;
+        width:2rem;
+        height:2rem;
       }
       
       &:nth-of-type(2){
@@ -231,8 +231,8 @@ $tab: 480px; // タブレット
         right:0;
         border-right:1px solid #333333;
         border-bottom:1px solid #333333;
-        width:3rem;
-        height:3rem;
+        width:2rem;
+        height:2rem;
       }
       
     }
@@ -434,48 +434,90 @@ $tab: 480px; // タブレット
   }
 
   span {
-    @include circle;
     position: absolute;
-    bottom: 4vh;
-    left: 50%;
-    @include centertransform;
-    width: 50px;
-    height: 50px;
-    border: 1px solid rgb(80, 80, 80);
-    animation: wave 3s infinite;
-    -webkit-animation: wave 3s infinite;
-    @keyframes wave {
-      0% {
-        opacity: 0.2;
-      }
-      30% {
-        opacity: 0.8;
-      }
-      90% {
-        opacity: 0;
-        box-shadow: 0 0 10px 30px rgb(150, 150, 150) ;
-      }
-      100% {
-        opacity: 0;
-      }
-    }
+    bottom: 10vh;
+    margin-left: 0.5rem;
+    width: 1rem;
+    height: 1rem;
+    border-left: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: scroll 2s infinite;
+    animation: scroll 2s infinite;
+    opacity: 0;
   }
-
-  span::after {
-    @include centertransform;
-    content: '';
-    position: absolute;
-    //中央寄せ高さ：円の高さ50px/2=25px三角形の中心高さ10px25-10=15pxposition: absolute;
-    top: 15px;
-    left: 50%;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 26px 15px 0 15px;
-    border-color: rgba(80, 80, 80, .5) transparent transparent transparent;
+  span:nth-of-type(1) {
+    top: -7vh;
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
   }
+  span:nth-of-type(2) {
+  top: -5vh;
+  -webkit-animation-delay: .15s;
+  animation-delay: .15s;
+  }
+  span:nth-of-type(3) {
+  top: -3vh;
+  -webkit-animation-delay: .3s;
+  animation-delay: .3s;
+}
+@-webkit-keyframes scroll {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
+@keyframes scroll {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+    // border: 1px solid rgb(80, 80, 80);
+    // animation: wave 3s infinite;
+    // -webkit-animation: wave 3s infinite;
+    // @keyframes wave {
+    //   0% {
+    //     opacity: 0.2;
+    //   }
+    //   30% {
+    //     opacity: 0.8;
+    //   }
+    //   90% {
+    //     opacity: 0;
+    //     box-shadow: 0 0 10px 30px rgb(150, 150, 150) ;
+    //   }
+    //   100% {
+    //     opacity: 0;
+    //   }
+    // }
+  }
+
+  // span::after {
+  //   @include centertransform;
+  //   content: '';
+  //   position: absolute;
+  //   //中央寄せ高さ：円の高さ50px/2=25px三角形の中心高さ10px25-10=15pxposition: absolute;
+  //   top: 15px;
+  //   left: 50%;
+  //   width: 0;
+  //   height: 0;
+  //   border-style: solid;
+  //   border-width: 26px 15px 0 15px;
+  //   border-color: rgba(80, 80, 80, .5) transparent transparent transparent;
+  // }
+  }
 
 // ・・・・・・・・・header・・・・・・・・・
 .Header {
@@ -841,6 +883,27 @@ body::before {
 .Price {
   display: block;
   @include black;
+
+  .Price__table {
+    margin: 2rem auto 1rem;
+    &-block {
+      border-bottom: 1px solid #F7F7F7;
+
+        &--left {
+          padding: 2rem; 
+          border-right: 1px solid #F7F7F7;
+        }
+  
+        &--right {
+        padding: 0 3rem 0 1rem; 
+      }
+    }
+  }
+
+  .Price__text {
+    margin-top: 2rem;
+    text-align: center;
+  }
 }
 // ・・・・・・・・・contact・・・・・・・・・
 .Contact {
