--- a/css/reset.css
+++ b/css/reset.css
@@ -55,3 +55,10 @@ a {
 	text-decoration: none;
 }
 
+input,textarea {
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-webkit-appearance: none;
+	max-width: 100%;
+}
