リセット追記

--- a/css/reset.css
+++ b/css/reset.css
@@ -62,3 +62,10 @@ input,textarea {
 	-webkit-appearance: none;
 	max-width: 100%;
 }
+
+input[type="submit"],
+input[type="button"],
+input[type="reset"] {
+	-webkit-appearance: none;
+  border-radius: 0;
+}
