--- a/css/main.scss
+++ b/css/main.scss
@@ -883,7 +883,10 @@ body::before {
   margin: 0 auto;
 
   .Contact__text {
-    margin: 2rem 0;
+    width: 100%;
+    max-width: 1000px;
+    text-align: left;
+    margin: 2rem auto;
     line-height: 1.5;
   }
 
@@ -930,13 +933,14 @@ body::before {
   }
 
   &__block-btn {
-    width: 10rem;
-    margin: 2rem auto 0;
+    margin: 2rem auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
   }
 
   &__block-send {
+    margin-right: 5%;
     padding: 0.5rem 1rem;
     border: none;
     border-top: 1px solid #333;
@@ -946,17 +950,16 @@ body::before {
     cursor: pointer;
     transition: all .3s;
   }
-
   &__block-send:hover {
     box-shadow: 0 3px 3px #7a7979;
     transform: translateY(-3px);
   }
-
   &__block-send:focus {
     outline: none;
   }
 
   &__block-reset {
+    margin-right: 5%;
     padding: 0.5rem 1rem;
     border: none;
     border-top: 1px solid #333;
@@ -966,20 +969,15 @@ body::before {
     cursor: pointer;
     transition: all .3s;
   }
-  
   &__block-reset:hover {
     box-shadow: 0 3px 3px #7a7979;
     transform: translateY(-3px);
   }
-
   &__block-reset:focus {
     outline: none;
   }
 
   .Contant__sns {
-    padding-top: 2rem;
-    width: 10rem;
-    margin: 0 auto;
     text-align: center;
     a {
       color: #333;
