--- a/css/main.css
+++ b/css/main.css
@@ -877,15 +877,16 @@ body::before {
 .Work .Work__capture .work__capture-img {
   display: flex;
   position: relative;
-  width: 15rem;
-  height: 10rem;
+  width: 40%;
+  max-width: 20rem;
+  height: 15rem;
   margin: 1rem;
 }
 
-@media (min-width: 1024px) {
+@media (max-width: 479px) {
   .Work .Work__capture .work__capture-img {
-    width: 10rem;
-    height: 10rem;
+    width: 20rem;
+    height: 20rem;
   }
 }
 
@@ -906,16 +907,18 @@ body::before {
   display: none;
   width: 100%;
   height: 100%;
-  background: rgba(51, 51, 51, 0.7);
+  background: rgba(51, 51, 51, 0.5);
   color: #EAEAEA;
 }
 
-.Work .Work__capture .caption p {
+.Work .Work__capture .caption .modal-link {
   position: absolute;
   top: 70%;
-  padding: 0 1rem;
   font-size: 12px;
   font-size: 0.75rem;
+  width: 100%;
+  padding: 1rem;
+  background: rgba(51, 51, 51, 0.7);
 }
 
 .Work .Work__capture-link {
@@ -924,6 +927,81 @@ body::before {
   text-align: center;
   width: 20%;
   color: #333;
+}
+
+.modal-switch {
+  display: block;
+  text-align: center;
+  margin: 1rem auto;
+  width: 6rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  color: #333;
+  border-bottom: 1px solid #333;
+  background: #EAEAEA;
+  cursor: pointer;
+}
+
+.modal-button:hover {
+  opacity: 0.5;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100%;
+  z-index: 100;
+}
+
+.modal-window {
+  display: none;
+  width: 40vw;
+  height: 50vw;
+  border: 1px solid #333;
+  color: #333;
+  background: #EAEAEA;
+  position: fixed;
+  z-index: 110;
+}
+
+@media (min-width: 480px) and (max-width: 1024px) {
+  .modal-window {
+    width: 50vw;
+    height: 60vw;
+  }
+}
+
+@media (max-width: 479px) {
+  .modal-window {
+    width: 80vw;
+    height: 90vw;
+  }
+}
+
+.modal-window__text {
+  padding: 1rem;
+  line-height: 1.5;
+  font-size: 14px;
+  font-size: 0.875rem;
+}
+
+@media (max-width: 479px) {
+  .modal-window__text {
+    font-size: 12px;
+    font-size: 0.75rem;
+  }
+}
+
+.modal-window__about {
+  margin-bottom: .5rem;
+}
+
+.modal-window__about:last-child {
+  margin-bottom: 0;
 }
 
 .Price {
