モーダルウィンドウ位置再調整

--- a/css/main.css
+++ b/css/main.css
@@ -952,8 +952,8 @@ body::before {
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  width: 100vw;
-  height: 100%;
+  width: 100%;
+  height: 120%;
   z-index: 100;
 }
 
