--- a/css/main.scss
+++ b/css/main.scss
@@ -876,8 +876,8 @@ body::before {
   top: 0;
   left: 0;
   background-color: rgba(0 ,0 ,0 ,0.5);
-  width: 100vw;
-  height: 100%;
+  width: 100%;
+  height: 120%;  // スマホのナビバー対策で120％
   z-index: 100;
 }
 
