--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,10 @@ body {
   }
 }
 
+.highlight {
+  background: #7a7979;
+}
+
 .link {
   display: inline-block;
   margin-top: 1rem;
@@ -929,62 +933,36 @@ body::before {
   color: #333;
 }
 
-.modal-switch {
-  display: block;
-  text-align: center;
-  margin: 1rem auto;
-  width: 6rem;
-  padding: 0.5rem 1rem;
-  border: none;
-  color: #333;
-  border-bottom: 1px solid #333;
-  background: #EAEAEA;
-  cursor: pointer;
-}
-
-.modal-button:hover {
-  opacity: 0.5;
-}
-
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  height: 120%;
-  z-index: 100;
-}
-
 .modal-window {
   display: none;
-  width: 40vw;
-  height: 50vw;
+  position: fixed;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  width: 120%;
+  height: 180%;
   border: 1px solid #333;
   color: #333;
-  background: #EAEAEA;
-  position: fixed;
+  background: rgba(51, 51, 51, 0.9);
   z-index: 110;
-}
-
-@media (min-width: 480px) and (max-width: 1024px) {
-  .modal-window {
-    width: 50vw;
-    height: 60vw;
-  }
 }
 
 @media (max-width: 479px) {
   .modal-window {
-    width: 80vw;
-    height: 90vw;
+    width: 100%;
+    height: 130%;
   }
 }
 
 .modal-window__text {
   padding: 1rem;
   line-height: 1.5;
+  color: #F7F7F7;
   font-size: 14px;
   font-size: 0.875rem;
 }
@@ -1002,6 +980,22 @@ body::before {
 
 .modal-window__about:last-child {
   margin-bottom: 0;
+}
+
+.modal-window .modal-switch {
+  display: block;
+  text-align: center;
+  margin: 1rem auto;
+  width: 6rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  color: #F7F7F7;
+  border: 1px solid #F7F7F7;
+  cursor: pointer;
+}
+
+.modal-window .modal-button:hover {
+  opacity: 0.5;
 }
 
 .Price {
