--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,20 @@ body {
   height: 120%;
 }
 
+.fadeInopacity {
+  opacity: 0;
+  transition: all 4s;
+  -webkit-transition: all 4s;
+  -moz-transition: all 4s;
+  -ms-transition: all 4s;
+  -o-transition: all 4s;
+}
+
+/* 画面内に入った状態 */
+.fadeInopacity.scrollIn {
+  opacity: 1;
+}
+
 .fadeIn {
   opacity: .3;
   transform: translate(0, 15vh);
@@ -458,6 +472,7 @@ body {
   position: -webkit-sticky;
   top: 0;
   background: #333333;
+  transform: translate3d(0, 0, 0);
   box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 9px 3px -3px rgba(0, 0, 0, 0.1);
@@ -933,19 +948,29 @@ body::before {
   color: #333;
 }
 
+.overray {
+  display: none;
+  width: 100vw;
+  height: 120vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+}
+
 .modal-window {
   display: none;
   position: fixed;
-  position: absolute;
-  top: 50%;
+  top: 10%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  width: 120%;
-  height: 180%;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  width: 50vw;
+  padding: 1rem;
   font-size: 14px;
   font-size: 0.875rem;
   border: 1px solid #333;
@@ -954,10 +979,19 @@ body::before {
   z-index: 110;
 }
 
+@media (min-width: 480px) and (max-width: 1024px) {
+  .modal-window {
+    top: 20%;
+    left: 50%;
+    width: 50vw;
+  }
+}
+
 @media (max-width: 479px) {
   .modal-window {
-    width: 100vw;
-    height: 130%;
+    top: 20%;
+    left: 50%;
+    width: 80vw;
   }
 }
 
