--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@ body {
   font-family: 'Rajdhani', sans-serif;
 }
 
+.no_scroll {
+  overflow: hidden;
+}
+
 @media (min-width: 1024px) {
   :root {
     font-size: 20px;
@@ -938,6 +942,7 @@ body::before {
   width: 100%;
   padding: 1rem;
   background: rgba(51, 51, 51, 0.7);
+  cursor: pointer;
 }
 
 .Work .Work__capture-link {
@@ -950,19 +955,21 @@ body::before {
 
 .overray {
   display: none;
-  width: 100vw;
-  height: 120vh;
+  width: 100%;
+  height: 120%;
   position: fixed;
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.5);
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   z-index: 100;
 }
 
 .modal-window {
   display: none;
   position: fixed;
-  top: 10%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%);
   -webkit-transform: translate(-50%);
@@ -981,7 +988,6 @@ body::before {
 
 @media (min-width: 480px) and (max-width: 1024px) {
   .modal-window {
-    top: 20%;
     left: 50%;
     width: 50vw;
   }
@@ -1001,6 +1007,11 @@ body::before {
   color: #F7F7F7;
 }
 
+.modal-window__text a {
+  color: #F7F7F7;
+  text-decoration: underline;
+}
+
 .modal-window__about {
   margin-bottom: .5rem;
 }
@@ -1010,10 +1021,14 @@ body::before {
 }
 
 .modal-window .modal-switch {
-  display: block;
+  display: flex;
+  justify-content: center;
+}
+
+.modal-window .modal-switch__btn {
   text-align: center;
   margin: 1rem auto;
-  width: 6rem;
+  width: 40%;
   padding: 0.5rem 1rem;
   border: none;
   color: #F7F7F7;
@@ -1021,7 +1036,7 @@ body::before {
   cursor: pointer;
 }
 
-.modal-window .modal-button:hover {
+.modal-window .modal-button__btn:hover {
   opacity: 0.5;
 }
 
