main.scssのimportディレクトリにすべて_をつけ、main.scss上で一度上書き保存

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,29 +1,29 @@
 // ==================base==================
-@import "./base/base";
+@import "./base/_base";
 
 // ==================mixin==================
-@import "./mixin/width";
-@import "./mixin/background";
-@import "./mixin/responsive";
-@import "./mixin/fontsize";
-@import "./mixin/center";
-@import "./mixin/circle";
-@import "./mixin/topanimation";
-@import "./mixin/header";
-@import "./mixin/pallax";
-@import "./mixin/section";
+@import "./mixin/_width";
+@import "./mixin/_background";
+@import "./mixin/_responsive";
+@import "./mixin/_fontsize";
+@import "./mixin/_center";
+@import "./mixin/_circle";
+@import "./mixin/_topanimation";
+@import "./mixin/_header";
+@import "./mixin/_pallax";
+@import "./mixin/_section";
 
 // ==================module==================
-@import "./module/linkbtn";
-@import "./module/fadein";
-@import "./module/section";
+@import "./module/_linkbtn";
+@import "./module/_fadein";
+@import "./module/_section";
 
 // ==================page==================
-@import "./page/01TopVisual/topvisual";
-@import "./page/02Header/header";
-@import "./page/03About/about";
-@import "./page/04Service/service";
-@import "./page/05Work/work";
-@import "./page/06Price/price";
-@import "./page/07Contact/contact";
-@import "./page/08Footer/footer";
+@import "./page/01TopVisual/_topvisual";
+@import "./page/02Header/_header";
+@import "./page/03About/_about";
+@import "./page/04Service/_service";
+@import "./page/05Work/_work";
+@import "./page/06Price/_price";
+@import "./page/07Contact/_contact";
+@import "./page/08Footer/_footer";
