トップページに戻った際のフェードインオパシティ追加

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,7 @@
 @import "./page/03About/_about";
 @import "./page/04Service/_service";
 @import "./page/05Work/_work";
+@import "./page/05Work/_workmore";
 @import "./page/06Price/_price";
 @import "./page/07Contact/_contact";
 @import "./page/08Footer/_footer";
