--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -5,3 +5,23 @@ body {
 .no_scroll {
   overflow: hidden;
 }
+
+/* バウンススクロール時のカラースタイル */
+body::before,
+body::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 50%;
+    position: fixed;
+    left: 0;
+    z-index: -1;
+}
+body::before {
+    top: 0;
+    background-color: #7a7979;
+}
+body::after {
+    bottom: 0;
+    background-color: #7a7979;
+}
