--- a/css/page/05Work/_work.scss
+++ b/css/page/05Work/_work.scss
@@ -53,6 +53,7 @@
         top: 70%;
         @include fontsize(12);
         width: 100%;
+        text-align: center;
         padding: 1rem;
         background: rgba($color: #333, $alpha: .7);
         cursor: pointer;
