--- a/css/main.css
+++ b/css/main.css
@@ -1010,17 +1010,26 @@ body::before {
 
 @media (min-width: 480px) and (max-width: 1024px) {
   .modal-window {
-    top: 20%;
+    top: 10%;
     left: 50%;
-    width: 50vw;
   }
 }
 
 @media (max-width: 479px) {
   .modal-window {
-    top: 10%;
+    top: 10vw;
     left: 50%;
+  }
+}
+
+.modal-window__wrap {
+  overflow: scroll;
+}
+
+@media (max-width: 479px) {
+  .modal-window__wrap {
     width: 80vw;
+    height: 70vh;
   }
 }
 
