--- a/css/main.css
+++ b/css/main.css
@@ -1029,7 +1029,7 @@ body::before {
 @media (max-width: 479px) {
   .modal-window__wrap {
     width: 80vw;
-    height: 70vh;
+    height: 70%;
   }
 }
 
